--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "typewriter-effect": "^2.20.1"
   }
 }
