--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "leaflet": "^1.9.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "typewriter-effect": "^2.20.1"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.4"
   }
 }
