--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,6 +21,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "sass": "^1.67.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "typewriter-effect": "^2.20.1"
