--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "chart.js": "^4.4.0",
     "leaflet": "^1.9.4",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
