--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.0",
     "leaflet": "^1.9.4",
     "next": "13.4.19",
+    "next-intl": "^3.23.5",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
